updated contact heading in login form

--- a/myminiproject.html
+++ b/myminiproject.html
@@ -44,7 +44,7 @@
             <button class="btn cn_btn">contact us</button>
         </div>
         <div class="form">
-            <h2>Contact Us</h2>
+            <h2>Contact Us Here</h2>
             <input type="kid name" placeholder="Enter Kid Name"><br>
             <input type="parent name" placeholder="Enter parent Name"><br>
             <input type="email" placeholder="Enter your e-mail"><br>
